--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<div>
-    <div>
-        <button id="addProduct" onclick="CreateListProduct()">Add Product</button>
-    </div>
+<div id="main">
+<h1 id="heading">QUẢN LÝ SẢN PHẨM</h1>
+<div style="float: left">
+        <button style="background-color: #4C489D;color: white" id="addProduct" onclick="CreateListProduct()">Add Product</button>
 </div>
 <div class="addCreateForm">
     <input type="text" class="newProduct" name="addNewProduct" placeholder="Input Product Name">
@@ -16,7 +16,10 @@
     <input type="number" class="newProduct" name="addNewProduct" placeholder="Input The Number Of Product">
     <input type="number" class="newProduct" name="addNewProduct" placeholder="Input Product Size">
     <input type="text" class="newProduct" name="addNewProduct" placeholder="Input Product Color">
-    <button onclick="addNewProduct()">Add</button>
+    <button style="background-color: #4C489D;color: white;padding: 5px 12px" onclick="addNewProduct()">Add</button>
+</div>
+<div style="clear: left">
+    <button style="background-color: #4C489D;color: white" type="submit" onclick="Sort()">Sort Price</button>
 </div>
 
 <table id="ListProduct">
@@ -27,6 +30,8 @@
     <th>The Number Of Product</th>
     <th>Size</th>
     <th>Color</th>
+    <th></th>
+    <th></th>
     <button type="submit" id="update" class="update" onclick="updateProduct(i)">Update</button>
     </thead>
     <tbody id="tableBody">
@@ -40,5 +45,8 @@
 <script src="AddNewProduct.js"></script>
 <script src="EditProduct.js"></script>
 <script src="Delete.js"></script>
+<script src="Sort.js"></script>
+</div>
 </body>
+
 </html>
